# cloud-guardian

./: .gitignore  Makefile  README.md  load_to_aws.py  main.py  main_from_tuple.py  main_old.py  main_old_to_remove.py  main_to_remove.py  pyproject.toml  update_main_branch.sh
cloud_guardian/: __init__.py  ex_conditions.py  main.py
cloud_guardian/aws/: aws_manager.py  importer.py  manager.py
cloud_guardian/data/: fake_data_larger.csv  fake_iam_policies_new.csv  policy.csv
cloud_guardian/dynamic_model/: actions.py  model.py  state.py  utilities.py
cloud_guardian/iam_dynamic/: model.py
cloud_guardian/iam_model/: entities.py  generating.py  graph.py  graphold.py  iam_manager.py  identities.py  manager.py  parsing.py  permission.py  plotting.py  validating.py
cloud_guardian/iam_model_old/: generating.py  parsing.py
cloud_guardian/iam_static/: main_to_remove.py  model.py
cloud_guardian/mockup/: helpers_iam.py  helpers_s3.py
cloud_guardian/utils/: data_generator.py  data_generator_new.py  dataframe.py  helpers.py  loaders.py  maps.py  processing.py  shared.py  strings.py  tuple.py  tuple_repr copy.py  tuple_repr.py
data/: actions.json  actions_new.json  constraints.json  effects.json  fake_data_large.csv  graph_actions.json  identities.json  permissions.json
data/aws_example_0/: groups.json  identities_policies.json  policies.json  resources_policies.json  roles.json  users.json
data/aws_example_create_user/: identities_policies.json  roles.json  users.json
data/aws_example_pe/: groups.json  identities_policies.json  resources_policies.json
(+93 files in other folders)
